Simplify/update external links

--- a/docs/docs/cmd/aad/approleassignment/approleassignment-list.mdx
+++ b/docs/docs/cmd/aad/approleassignment/approleassignment-list.mdx
@@ -53,7 +53,7 @@ m365 aad approleassignment list --appObjectId b2307a39-e878-458b-bc90-03bc578531
 
 ## More information
 
-- Application and service principal objects in Azure Active Directory (Azure AD): [https://docs.microsoft.com/en-us/azure/active-directory/develop/active-directory-application-objects](https://docs.microsoft.com/en-us/azure/active-directory/develop/active-directory-application-objects)
+- Application and service principal objects in Azure Active Directory (Azure AD): [https://learn.microsoft.com/azure/active-directory/develop/active-directory-application-objects](https://learn.microsoft.com/azure/active-directory/develop/active-directory-application-objects)
 
 ## Response
 
