--- a/docs/docs/cmd/aad/approleassignment/approleassignment-remove.mdx
+++ b/docs/docs/cmd/aad/approleassignment/approleassignment-remove.mdx
@@ -70,4 +70,4 @@ The command won't return a response on success.
 
 ## More information
 
-- Microsoft Graph permissions reference: [https://docs.microsoft.com/en-us/graph/permissions-reference](https://docs.microsoft.com/en-us/graph/permissions-reference)
+- Microsoft Graph permissions reference: [https://learn.microsoft.com/graph/permissions-reference](https://learn.microsoft.com/graph/permissions-reference)
