--- a/docs/docs/cmd/aad/oauth2grant/oauth2grant-add.mdx
+++ b/docs/docs/cmd/aad/oauth2grant/oauth2grant-add.mdx
@@ -55,4 +55,4 @@ The command won't return a response on success.
 
 ## More information
 
-- Application and service principal objects in Azure Active Directory (Azure AD): [https://docs.microsoft.com/en-us/azure/active-directory/develop/active-directory-application-objects](https://docs.microsoft.com/en-us/azure/active-directory/develop/active-directory-application-objects)
+- Application and service principal objects in Azure Active Directory (Azure AD): [https://learn.microsoft.com/azure/active-directory/develop/active-directory-application-objects](https://learn.microsoft.com/azure/active-directory/develop/active-directory-application-objects)
