--- a/docs/docs/cmd/aad/siteclassification/siteclassification-get.mdx
+++ b/docs/docs/cmd/aad/siteclassification/siteclassification-get.mdx
@@ -81,4 +81,4 @@ m365 aad siteclassification get
 
 ## More information
 
-- SharePoint "modern" sites classification: [https://docs.microsoft.com/en-us/sharepoint/dev/solution-guidance/modern-experience-site-classification](https://docs.microsoft.com/en-us/sharepoint/dev/solution-guidance/modern-experience-site-classification)
+- SharePoint "modern" sites classification: [https://learn.microsoft.com/sharepoint/dev/solution-guidance/modern-experience-site-classification](https://learn.microsoft.com/sharepoint/dev/solution-guidance/modern-experience-site-classification)
