--- a/docs/docs/cmd/aad/siteclassification/siteclassification-set.mdx
+++ b/docs/docs/cmd/aad/siteclassification/siteclassification-set.mdx
@@ -61,4 +61,4 @@ The command won't return a response on success.
 
 ## More information
 
-- SharePoint "modern" sites classification: [https://docs.microsoft.com/en-us/sharepoint/dev/solution-guidance/modern-experience-site-classification](https://docs.microsoft.com/en-us/sharepoint/dev/solution-guidance/modern-experience-site-classification)
+- SharePoint "modern" sites classification: [https://learn.microsoft.com/sharepoint/dev/solution-guidance/modern-experience-site-classification](https://learn.microsoft.com/sharepoint/dev/solution-guidance/modern-experience-site-classification)
