--- a/docs/docs/cmd/onenote/notebook/notebook-list.mdx
+++ b/docs/docs/cmd/onenote/notebook/notebook-list.mdx
@@ -159,4 +159,4 @@ m365 onenote notebook list --webUrl https://contoso.sharepoint.com/sites/testsit
 
 ## More information
 
-- List notebooks (MS Graph docs): [https://docs.microsoft.com/en-us/graph/api/onenote-list-notebooks?view=graph-rest-1.0&tabs=http](https://docs.microsoft.com/en-us/graph/api/onenote-list-notebooks?view=graph-rest-1.0&tabs=http)
+- List notebooks (MS Graph docs): [https://learn.microsoft.com/graph/api/onenote-list-notebooks?view=graph-rest-1.0&tabs=http](https://learn.microsoft.com/graph/api/onenote-list-notebooks?view=graph-rest-1.0&tabs=http)
