--- a/docs/docs/cmd/outlook/message/message-list.mdx
+++ b/docs/docs/cmd/outlook/message/message-list.mdx
@@ -163,4 +163,4 @@ m365 outlook message list --folderName inbox
 
 ## More information
 
-- Well-known folder names: [https://docs.microsoft.com/en-us/graph/api/resources/mailfolder?view=graph-rest-1.0](https://docs.microsoft.com/en-us/graph/api/resources/mailfolder?view=graph-rest-1.0)
+- Well-known folder names: [https://learn.microsoft.com/graph/api/resources/mailfolder?view=graph-rest-1.0](https://learn.microsoft.com/graph/api/resources/mailfolder?view=graph-rest-1.0)
