--- a/docs/docs/cmd/purview/sensitivitylabel/sensitivitylabel-policysettings-list.mdx
+++ b/docs/docs/cmd/purview/sensitivitylabel/sensitivitylabel-policysettings-list.mdx
@@ -66,7 +66,7 @@ m365 purview sensitivitylabel policysettings list --userName john.doe@contoso.co
   ```json
   {
     "id": "71F139249895C2F6DC861031DAC47E0C2C37C6595582D4248CC77FD7293681B5DE348BC71AEB44068CB397DB021CADB4",
-    "moreInfoUrl": "https://docs.microsoft.com/en-us/microsoft-365/compliance/get-started-with-sensitivity-labels?view=o365-worldwide#end-user-documentation-for-sensitivity-labels",
+    "moreInfoUrl": "https://learn.microsoft.com/microsoft-365/compliance/get-started-with-sensitivity-labels?view=o365-worldwide#end-user-documentation-for-sensitivity-labels",
     "isMandatory": true,
     "isDowngradeJustificationRequired": true,
     "defaultLabelId": "022bb90d-0cda-491d-b861-d195b14532dc"
@@ -82,7 +82,7 @@ m365 purview sensitivitylabel policysettings list --userName john.doe@contoso.co
   DB021CADB4
   isDowngradeJustificationRequired: true
   isMandatory                     : true
-  moreInfoUrl                     : https://docs.microsoft.com/en-us/microsoft-365/compliance/get-started-with-sensitivity-labels?view=o365-worldwide#end-user-documentation-for-sensitivity-labels
+  moreInfoUrl                     : https://learn.microsoft.com/microsoft-365/compliance/get-started-with-sensitivity-labels?view=o365-worldwide#end-user-documentation-for-sensitivity-labels
   ```
 
   </TabItem>
@@ -90,7 +90,7 @@ m365 purview sensitivitylabel policysettings list --userName john.doe@contoso.co
 
   ```csv
   id,moreInfoUrl,isMandatory,isDowngradeJustificationRequired,defaultLabelId
-  71F139249895C2F6DC861031DAC47E0C2C37C6595582D4248CC77FD7293681B5DE348BC71AEB44068CB397DB021CADB4,https://docs.microsoft.com/en-us/microsoft-365/compliance/get-started-with-sensitivity-labels?view=o365-worldwide#end-user-documentation-for-sensitivity-labels,1,1,022bb90d-0cda-491d-b861-d195b14532dc
+  71F139249895C2F6DC861031DAC47E0C2C37C6595582D4248CC77FD7293681B5DE348BC71AEB44068CB397DB021CADB4,https://learn.microsoft.com/microsoft-365/compliance/get-started-with-sensitivity-labels?view=o365-worldwide#end-user-documentation-for-sensitivity-labels,1,1,022bb90d-0cda-491d-b861-d195b14532dc
   ```
 
   </TabItem>
@@ -106,7 +106,7 @@ m365 purview sensitivitylabel policysettings list --userName john.doe@contoso.co
   Property | Value
   ---------|-------
   id | 71F139249895C2F6DC861031DAC47E0C2C37C6595582D4248CC77FD7293681B5DE348BC71AEB44068CB397DB021CADB4
-  moreInfoUrl | https://docs.microsoft.com/en-us/microsoft-365/compliance/get-started-with-sensitivity-labels?view=o365-worldwide#end-user-documentation-for-sensitivity-labels
+  moreInfoUrl | https://learn.microsoft.com/microsoft-365/compliance/get-started-with-sensitivity-labels?view=o365-worldwide#end-user-documentation-for-sensitivity-labels
   isMandatory | true
   isDowngradeJustificationRequired | true
   defaultLabelId | 022bb90d-0cda-491d-b861-d195b14532dc
