--- a/docs/docs/cmd/spo/app/app-install.mdx
+++ b/docs/docs/cmd/spo/app/app-install.mdx
@@ -49,4 +49,4 @@ The command won't return a response on success.
 
 ## More information
 
-- Application Lifecycle Management (ALM) APIs: [https://docs.microsoft.com/en-us/sharepoint/dev/apis/alm-api-for-spfx-add-ins](https://docs.microsoft.com/en-us/sharepoint/dev/apis/alm-api-for-spfx-add-ins)
+- Application Lifecycle Management (ALM) APIs: [https://learn.microsoft.com/sharepoint/dev/apis/alm-api-for-spfx-add-ins](https://learn.microsoft.com/sharepoint/dev/apis/alm-api-for-spfx-add-ins)
