--- a/docs/docs/cmd/spo/contenttype/contenttype-add.mdx
+++ b/docs/docs/cmd/spo/contenttype/contenttype-add.mdx
@@ -213,4 +213,4 @@ m365 spo contenttype add --webUrl https://contoso.sharepoint.com/sites/contoso-s
 
 ## More information
 
-- Content Type IDs: [https://docs.microsoft.com/en-us/previous-versions/office/developer/sharepoint-2010/aa543822(v%3Doffice.14)](https://docs.microsoft.com/en-us/previous-versions/office/developer/sharepoint-2010/aa543822(v%3Doffice.14))
+- Content Type IDs: [https://learn.microsoft.com/previous-versions/office/developer/sharepoint-2010/aa543822(v%3Doffice.14)](https://learn.microsoft.com/previous-versions/office/developer/sharepoint-2010/aa543822(v%3Doffice.14))
