--- a/docs/docs/cmd/spo/site/site-add.mdx
+++ b/docs/docs/cmd/spo/site/site-add.mdx
@@ -215,4 +215,4 @@ m365 spo site add --type ClassicSite --url https://contoso.sharepoint.com/sites/
 
 ## More information
 
-- Creating SharePoint Communication Site using REST: [https://docs.microsoft.com/en-us/sharepoint/dev/apis/communication-site-creation-rest](https://docs.microsoft.com/en-us/sharepoint/dev/apis/communication-site-creation-rest)
+- Creating SharePoint Communication Site using REST: [https://learn.microsoft.com/sharepoint/dev/apis/communication-site-creation-rest](https://learn.microsoft.com/sharepoint/dev/apis/communication-site-creation-rest)
