--- a/docs/docs/cmd/spo/site/site-appcatalog-remove.mdx
+++ b/docs/docs/cmd/spo/site/site-appcatalog-remove.mdx
@@ -43,4 +43,4 @@ The command won't return a response on success.
 
 ## More information
 
-- Use the site collection app catalog: [https://docs.microsoft.com/en-us/sharepoint/dev/general-development/site-collection-app-catalog](https://docs.microsoft.com/en-us/sharepoint/dev/general-development/site-collection-app-catalog)
+- Use the site collection app catalog: [https://learn.microsoft.com/sharepoint/dev/general-development/site-collection-app-catalog](https://learn.microsoft.com/sharepoint/dev/general-development/site-collection-app-catalog)
