--- a/docs/docs/cmd/spo/sitedesign/sitedesign-apply.mdx
+++ b/docs/docs/cmd/spo/sitedesign/sitedesign-apply.mdx
@@ -166,4 +166,4 @@ When we make use of the option `asTask`, the response will differ.
 
 ## More information
 
-- SharePoint site design and site script overview: [https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-design-overview](https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-design-overview)
+- SharePoint site design and site script overview: [https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-design-overview](https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-design-overview)
