--- a/docs/docs/cmd/spo/sitedesign/sitedesign-run-list.mdx
+++ b/docs/docs/cmd/spo/sitedesign/sitedesign-run-list.mdx
@@ -104,4 +104,4 @@ m365 spo sitedesign run list --webUrl https://contoso.sharepoint.com/sites/team-
 
 ## More information
 
-- SharePoint site design and site script overview: [https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-design-overview](https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-design-overview)
+- SharePoint site design and site script overview: [https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-design-overview](https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-design-overview)
