--- a/docs/docs/cmd/spo/storageentity/storageentity-set.mdx
+++ b/docs/docs/cmd/spo/storageentity/storageentity-set.mdx
@@ -57,4 +57,4 @@ The command won't return a response on success.
 
 ## More information
 
-- SharePoint Framework Tenant Properties: [https://docs.microsoft.com/en-us/sharepoint/dev/spfx/tenant-properties](https://docs.microsoft.com/en-us/sharepoint/dev/spfx/tenant-properties)
+- SharePoint Framework Tenant Properties: [https://learn.microsoft.com/sharepoint/dev/spfx/tenant-properties](https://learn.microsoft.com/sharepoint/dev/spfx/tenant-properties)
