--- a/docs/docs/cmd/spo/theme/theme-apply.mdx
+++ b/docs/docs/cmd/spo/theme/theme-apply.mdx
@@ -86,5 +86,5 @@ m365 spo theme apply --name Blue --webUrl https://contoso.sharepoint.com/sites/p
 
 ## More information
 
-- SharePoint site theming: [https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview](https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview)
+- SharePoint site theming: [https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview](https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview)
 - Theme Generator: [https://aka.ms/themedesigner](https://aka.ms/themedesigner)
