--- a/docs/docs/cmd/spo/theme/theme-remove.mdx
+++ b/docs/docs/cmd/spo/theme/theme-remove.mdx
@@ -50,4 +50,4 @@ The command won't return a response on success.
 
 ## More information
 
-- SharePoint site theming: [https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview](https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview)
+- SharePoint site theming: [https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview](https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview)
