--- a/docs/docs/cmd/spo/user/user-remove.mdx
+++ b/docs/docs/cmd/spo/user/user-remove.mdx
@@ -52,4 +52,4 @@ The command won't return a response on success.
 
 ## More information
 
-- Remove-PnPUser - [https://docs.microsoft.com/en-us/powershell/module/sharepoint-pnp/remove-pnpuser?view=sharepoint-ps](https://docs.microsoft.com/en-us/powershell/module/sharepoint-pnp/remove-pnpuser?view=sharepoint-ps)
+- Remove-PnPUser - [https://learn.microsoft.com/powershell/module/sharepoint-pnp/remove-pnpuser?view=sharepoint-ps](https://learn.microsoft.com/powershell/module/sharepoint-pnp/remove-pnpuser?view=sharepoint-ps)
