--- a/docs/docs/cmd/spo/web/web-set.mdx
+++ b/docs/docs/cmd/spo/web/web-set.mdx
@@ -118,4 +118,4 @@ The command won't return a response on success.
 
 ## More information
 
-- Web properties: [https://docs.microsoft.com/en-us/previous-versions/office/sharepoint-server/ee545886(v=office.15)](https://docs.microsoft.com/en-us/previous-versions/office/sharepoint-server/ee545886(v=office.15))
+- Web properties: [https://learn.microsoft.com/previous-versions/office/sharepoint-server/ee545886(v=office.15)](https://learn.microsoft.com/previous-versions/office/sharepoint-server/ee545886(v=office.15))
