--- a/docs/docs/cmd/teams/channel/channel-remove.mdx
+++ b/docs/docs/cmd/teams/channel/channel-remove.mdx
@@ -67,4 +67,4 @@ The command won't return a response on success.
 
 ## More information
 
-- directory resource type (deleted items): [https://docs.microsoft.com/en-us/graph/api/resources/directory?view=graph-rest-1.0](https://docs.microsoft.com/en-us/graph/api/resources/directory?view=graph-rest-1.0)
+- directory resource type (deleted items): [https://learn.microsoft.com/graph/api/resources/directory?view=graph-rest-1.0](https://learn.microsoft.com/graph/api/resources/directory?view=graph-rest-1.0)
