--- a/docs/docs/cmd/teams/report/report-pstncalls.mdx
+++ b/docs/docs/cmd/teams/report/report-pstncalls.mdx
@@ -52,7 +52,7 @@ m365 teams report pstncalls --fromDateTime 2020-10-31 --toDateTime 2020-12-31 --
 
 ## More information
 
-- List PSTN calls: [https://docs.microsoft.com/en-us/graph/api/callrecords-callrecord-getpstncalls?view=graph-rest-1.0](https://docs.microsoft.com/en-us/graph/api/callrecords-callrecord-getpstncalls?view=graph-rest-1.0)
+- List PSTN calls: [https://learn.microsoft.com/graph/api/callrecords-callrecord-getpstncalls?view=graph-rest-1.0](https://learn.microsoft.com/graph/api/callrecords-callrecord-getpstncalls?view=graph-rest-1.0)
 
 ## Response
 
