--- a/docs/docs/cmd/teams/tab/tab-remove.mdx
+++ b/docs/docs/cmd/teams/tab/tab-remove.mdx
@@ -48,4 +48,4 @@ The command won't return a response on success.
 
 ## More information
 
-- Delete tab from channel: [https://docs.microsoft.com/en-us/graph/api/teamstab-delete?view=graph-rest-1.0](https://docs.microsoft.com/en-us/graph/api/teamstab-delete?view=graph-rest-1.0)
+- Delete tab from channel: [https://learn.microsoft.com/graph/api/channel-delete-tabs](https://learn.microsoft.com/graph/api/channel-delete-tabs)
