--- a/docs/docs/cmd/tenant/serviceannouncement/serviceannouncement-message-get.mdx
+++ b/docs/docs/cmd/tenant/serviceannouncement/serviceannouncement-message-get.mdx
@@ -123,5 +123,5 @@ m365 tenant serviceannouncement message get --id MC001337
 
 ## More information
 
-- Microsoft Graph REST API reference: [https://docs.microsoft.com/en-us/graph/api/serviceupdatemessage-get](https://docs.microsoft.com/en-us/graph/api/serviceupdatemessage-get)
+- Microsoft Graph REST API reference: [https://learn.microsoft.com/graph/api/serviceupdatemessage-get](https://learn.microsoft.com/graph/api/serviceupdatemessage-get)
 
