--- a/docs/docs/cmd/tenant/serviceannouncement/serviceannouncement-message-list.mdx
+++ b/docs/docs/cmd/tenant/serviceannouncement/serviceannouncement-message-list.mdx
@@ -118,4 +118,4 @@ m365 tenant serviceannouncement message list --service "Microsoft Teams"
 
 ## More information
 
-- List serviceAnnouncement messages: [https://docs.microsoft.com/en-us/graph/api/serviceannouncement-list-messages](https://docs.microsoft.com/en-us/graph/api/serviceannouncement-list-messages)
+- List serviceAnnouncement messages: [https://learn.microsoft.com/graph/api/serviceannouncement-list-messages](https://learn.microsoft.com/graph/api/serviceannouncement-list-messages)
