--- a/docs/docs/contribute/expect-during-pr.mdx
+++ b/docs/docs/contribute/expect-during-pr.mdx
@@ -34,6 +34,6 @@ During the subsequent review, the maintainer will perform another round of evalu
 
 ## Response time for requested changes
 
-Reviewers will wait for four weeks after requesting changes before closing a PR. They will follow up with you before closing it. You can open a new PR at any time after syncing your fork. For guidance on syncing your fork, refer to this [guide](https://github.com/pnp/cli-microsoft365/blob/main/CONTRIBUTING.mdx#tips).
+Reviewers will wait for four weeks after requesting changes before closing a PR. They will follow up with you before closing it. You can open a new PR at any time after syncing your fork. For guidance on syncing your fork, refer to this [guide](https://github.com/pnp/cli-microsoft365/blob/main/CONTRIBUTING.md#tips).
 
 By following these steps and understanding the review process, we can collaborate effectively to incorporate your awesome contributions into the CLI for Microsoft 365.
