--- a/docs/docs/sample-scripts/spo/sync-splib-into-az-storage-container/index.mdx
+++ b/docs/docs/sample-scripts/spo/sync-splib-into-az-storage-container/index.mdx
@@ -17,7 +17,7 @@ This PowerShell script shows how to download and sync documents in a SharePoint 
 Prerequisites:
 
 - [Microsoft 365 CLI](https://pnp.github.io/cli-microsoft365/)
-- [Azure CLI](https://docs.microsoft.com/en-us/cli/azure/?view=azure-cli-latest)
+- [Azure CLI](https://learn.microsoft.com/cli/azure/?view=azure-cli-latest)
 - SharePoint Online Site
 - Document Library with documents
 - Azure Storage Container
