--- a/docs/docs/sample-scripts/teams/share-socialchampions/index.mdx
+++ b/docs/docs/sample-scripts/teams/share-socialchampions/index.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 
 # Share social champions to Teams
 
-Author: [Albert-Jan Schot](https://www.cloudappie.nl/recognize-contributions-clim365) Inspired by: [Emily Mancini](https://docs.microsoft.com/en-us/microsoft-365/community/identifying-your-sharepoint-champions)
+Author: [Albert-Jan Schot](https://www.cloudappie.nl/recognize-contributions-clim365) Inspired by: [Emily Mancini](https://learn.microsoft.com/microsoft-365/community/identifying-your-sharepoint-champions)
 
 Retrieves activities for SharePoint Online, Teams and Yammer and shares the top 3 contributors for each category as an adaptive card to the specified webhook url.
 
