--- a/docs/docs/cmd/aad/approleassignment/approleassignment-add.mdx
+++ b/docs/docs/cmd/aad/approleassignment/approleassignment-add.mdx
@@ -124,4 +124,4 @@ m365 aad approleassignment add --appObjectId "57907bf8-73fa-43a6-89a5-1f603e29e4
 
 ## More information
 
-- Microsoft Graph permissions reference: [https://docs.microsoft.com/en-us/graph/permissions-reference](https://docs.microsoft.com/en-us/graph/permissions-reference)
+- Microsoft Graph permissions reference: [https://learn.microsoft.com/graph/permissions-reference](https://learn.microsoft.com/graph/permissions-reference)
