--- a/docs/docs/cmd/aad/oauth2grant/oauth2grant-list.mdx
+++ b/docs/docs/cmd/aad/oauth2grant/oauth2grant-list.mdx
@@ -94,5 +94,5 @@ m365 aad oauth2grant list --spObjectId b2307a39-e878-458b-bc90-03bc578531d6
 
 ## More information
 
-- Application and service principal objects in Azure Active Directory (Azure AD): [https://docs.microsoft.com/en-us/azure/active-directory/develop/active-directory-application-objects](https://docs.microsoft.com/en-us/azure/active-directory/develop/active-directory-application-objects)
-- List oauth2PermissionGrants: [https://docs.microsoft.com/en-us/graph/api/oauth2permissiongrant-list?view=graph-rest-1.0](https://docs.microsoft.com/en-us/graph/api/oauth2permissiongrant-list?view=graph-rest-1.0)
+- Application and service principal objects in Azure Active Directory (Azure AD): [https://learn.microsoft.com/azure/active-directory/develop/active-directory-application-objects](https://learn.microsoft.com/azure/active-directory/develop/active-directory-application-objects)
+- List oauth2PermissionGrants: [https://learn.microsoft.com/graph/api/oauth2permissiongrant-list?view=graph-rest-1.0](https://learn.microsoft.com/graph/api/oauth2permissiongrant-list?view=graph-rest-1.0)
