--- a/docs/docs/cmd/aad/policy/policy-list.mdx
+++ b/docs/docs/cmd/aad/policy/policy-list.mdx
@@ -112,4 +112,4 @@ m365 aad policy list --type "claimsMapping"
 
 ## More information
 
-- Microsoft Graph Azure AD policy overview: [https://docs.microsoft.com/en-us/graph/api/resources/policy-overview?view=graph-rest-1.0](https://docs.microsoft.com/en-us/graph/api/resources/policy-overview?view=graph-rest-1.0)
+- Microsoft Graph Azure AD policy overview: [https://learn.microsoft.com/graph/api/resources/policy-overview?view=graph-rest-1.0](https://learn.microsoft.com/graph/api/resources/policy-overview?view=graph-rest-1.0)
