--- a/docs/docs/cmd/outlook/message/message-move.mdx
+++ b/docs/docs/cmd/outlook/message/message-move.mdx
@@ -58,4 +58,4 @@ The command won't return a response on success.
 
 ## More information
 
-- Well-known folder names: [https://docs.microsoft.com/en-us/graph/api/resources/mailfolder?view=graph-rest-1.0](https://docs.microsoft.com/en-us/graph/api/resources/mailfolder?view=graph-rest-1.0)
+- Well-known folder names: [https://learn.microsoft.com/graph/api/resources/mailfolder?view=graph-rest-1.0](https://learn.microsoft.com/graph/api/resources/mailfolder?view=graph-rest-1.0)
