--- a/docs/docs/cmd/planner/bucket/bucket-add.mdx
+++ b/docs/docs/cmd/planner/bucket/bucket-add.mdx
@@ -34,7 +34,7 @@ m365 planner bucket add [options]
 : Name of the group to which the plan belongs. Specify `ownerGroupId` or `ownerGroupName` when using `planTitle`.
 
 `--orderHint [orderHint]`
-: Hint used to order items of this type in a list view. The format is defined as outlined [here](https://docs.microsoft.com/en-us/graph/api/resources/planner-order-hint-format?view=graph-rest-1.0).
+: Hint used to order items of this type in a list view. The format is defined as outlined [here](https://learn.microsoft.com/graph/api/resources/planner-order-hint-format?view=graph-rest-1.0).
 ```
 
 <Global />
