--- a/docs/docs/cmd/spo/app/app-add.mdx
+++ b/docs/docs/cmd/spo/app/app-add.mdx
@@ -147,4 +147,4 @@ m365 spo app add --filePath c:\spfx.sppkg --appCatalogScope sitecollection --app
 
 ## More information
 
-- Application Lifecycle Management (ALM) APIs: [https://docs.microsoft.com/en-us/sharepoint/dev/apis/alm-api-for-spfx-add-ins](https://docs.microsoft.com/en-us/sharepoint/dev/apis/alm-api-for-spfx-add-ins)
+- Application Lifecycle Management (ALM) APIs: [https://learn.microsoft.com/sharepoint/dev/apis/alm-api-for-spfx-add-ins](https://learn.microsoft.com/sharepoint/dev/apis/alm-api-for-spfx-add-ins)
