--- a/docs/docs/cmd/spo/app/app-get.mdx
+++ b/docs/docs/cmd/spo/app/app-get.mdx
@@ -171,4 +171,4 @@ m365 spo app get --id b2307a39-e878-458b-bc90-03bc578531d6 --appCatalogScope sit
 
 ## More information
 
-- Application Lifecycle Management (ALM) APIs: [https://docs.microsoft.com/en-us/sharepoint/dev/apis/alm-api-for-spfx-add-ins](https://docs.microsoft.com/en-us/sharepoint/dev/apis/alm-api-for-spfx-add-ins)
+- Application Lifecycle Management (ALM) APIs: [https://learn.microsoft.com/sharepoint/dev/apis/alm-api-for-spfx-add-ins](https://learn.microsoft.com/sharepoint/dev/apis/alm-api-for-spfx-add-ins)
