--- a/docs/docs/cmd/spo/app/app-list.mdx
+++ b/docs/docs/cmd/spo/app/app-list.mdx
@@ -138,4 +138,4 @@ m365 spo app list --appCatalogScope sitecollection --appCatalogUrl https://conto
 
 ## More information
 
-- Application Lifecycle Management (ALM) APIs: [https://docs.microsoft.com/en-us/sharepoint/dev/apis/alm-api-for-spfx-add-ins](https://docs.microsoft.com/en-us/sharepoint/dev/apis/alm-api-for-spfx-add-ins)
+- Application Lifecycle Management (ALM) APIs: [https://learn.microsoft.com/sharepoint/dev/apis/alm-api-for-spfx-add-ins](https://learn.microsoft.com/sharepoint/dev/apis/alm-api-for-spfx-add-ins)
