--- a/docs/docs/cmd/spo/hidedefaultthemes/hidedefaultthemes-get.mdx
+++ b/docs/docs/cmd/spo/hidedefaultthemes/hidedefaultthemes-get.mdx
@@ -67,4 +67,4 @@ m365 spo hidedefaultthemes get
 
 ## More information
 
-- SharePoint site theming: [https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview](https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview)
+- SharePoint site theming: [https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview](https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview)
