--- a/docs/docs/cmd/spo/site/site-groupify.mdx
+++ b/docs/docs/cmd/spo/site/site-groupify.mdx
@@ -129,4 +129,4 @@ m365 spo site groupify --url https://contoso.sharepoin.com/sites/team-a --alias 
 
 ## More information
 
-- Overview of the "Log in to new Microsoft 365 group" feature: [https://docs.microsoft.com/en-us/sharepoint/dev/features/groupify/groupify-overview](https://docs.microsoft.com/en-us/sharepoint/dev/features/groupify/groupify-overview)
+- Overview of the "Log in to new Microsoft 365 group" feature: [https://learn.microsoft.com/sharepoint/dev/features/groupify/groupify-overview](https://learn.microsoft.com/sharepoint/dev/features/groupify/groupify-overview)
