--- a/docs/docs/cmd/spo/sitedesign/sitedesign-get.mdx
+++ b/docs/docs/cmd/spo/sitedesign/sitedesign-get.mdx
@@ -159,4 +159,4 @@ m365 spo sitedesign get --title "Contoso Site Design"
 
 ## More information
 
-- SharePoint site design and site script overview: [https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-design-overview](https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-design-overview)
+- SharePoint site design and site script overview: [https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-design-overview](https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-design-overview)
