--- a/docs/docs/cmd/spo/sitedesign/sitedesign-task-get.mdx
+++ b/docs/docs/cmd/spo/sitedesign/sitedesign-task-get.mdx
@@ -90,4 +90,4 @@ m365 spo sitedesign task get --id 6ec3ca5b-d04b-4381-b169-61378556d76e
 
 ## More information
 
-- SharePoint site design and site script overview: [https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-design-overview](https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-design-overview)
+- SharePoint site design and site script overview: [https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-design-overview](https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-design-overview)
