--- a/docs/docs/cmd/spo/sitescript/sitescript-list.mdx
+++ b/docs/docs/cmd/spo/sitescript/sitescript-list.mdx
@@ -84,4 +84,4 @@ m365 spo sitescript list
 
 ## More information
 
-- SharePoint site design and site script overview: [https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-design-overview](https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-design-overview)
+- SharePoint site design and site script overview: [https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-design-overview](https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-design-overview)
