--- a/docs/docs/cmd/spo/storageentity/storageentity-get.mdx
+++ b/docs/docs/cmd/spo/storageentity/storageentity-get.mdx
@@ -86,4 +86,4 @@ m365 spo storageentity get -k AnalyticsId
 
 ## More information
 
-- SharePoint Framework Tenant Properties: [https://docs.microsoft.com/en-us/sharepoint/dev/spfx/tenant-properties](https://docs.microsoft.com/en-us/sharepoint/dev/spfx/tenant-properties)
+- SharePoint Framework Tenant Properties: [https://learn.microsoft.com/sharepoint/dev/spfx/tenant-properties](https://learn.microsoft.com/sharepoint/dev/spfx/tenant-properties)
