--- a/docs/docs/cmd/spo/storageentity/storageentity-list.mdx
+++ b/docs/docs/cmd/spo/storageentity/storageentity-list.mdx
@@ -87,4 +87,4 @@ m365 spo storageentity list -u https://contoso.sharepoint.com/sites/appcatalog
 
 ## More information
 
-- SharePoint Framework Tenant Properties: [https://docs.microsoft.com/en-us/sharepoint/dev/spfx/tenant-properties](https://docs.microsoft.com/en-us/sharepoint/dev/spfx/tenant-properties)
+- SharePoint Framework Tenant Properties: [https://learn.microsoft.com/sharepoint/dev/spfx/tenant-properties](https://learn.microsoft.com/sharepoint/dev/spfx/tenant-properties)
