--- a/docs/docs/cmd/spo/theme/theme-list.mdx
+++ b/docs/docs/cmd/spo/theme/theme-list.mdx
@@ -84,4 +84,4 @@ m365 spo theme list
 
 ## More information
 
-- SharePoint site theming: [https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview](https://docs.microsoft.com/en-us/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview)
+- SharePoint site theming: [https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview](https://learn.microsoft.com/sharepoint/dev/declarative-customization/site-theming/sharepoint-site-theming-overview)
