--- a/docs/docs/cmd/tenant/serviceannouncement/serviceannouncement-healthissue-list.mdx
+++ b/docs/docs/cmd/tenant/serviceannouncement/serviceannouncement-healthissue-list.mdx
@@ -121,4 +121,4 @@ m365 tenant serviceannouncement healthissue list --service "Microsoft Forms"
 
 ## More information
 
-- List serviceAnnouncement issues: [https://docs.microsoft.com/en-us/graph/api/serviceannouncement-list-issues](https://docs.microsoft.com/en-us/graph/api/serviceannouncement-list-issues)
+- List serviceAnnouncement issues: [https://learn.microsoft.com/graph/api/serviceannouncement-list-issues](https://learn.microsoft.com/graph/api/serviceannouncement-list-issues)
