--- a/docs/docs/sample-scripts/spo/grant-api-permissions-aad/index.mdx
+++ b/docs/docs/sample-scripts/spo/grant-api-permissions-aad/index.mdx
@@ -35,7 +35,7 @@ This trick is just for development purposes. In Production environment, you shou
 
 :::caution
 
-These permissions will be granted on the whole tenant and could be used by any script running in your tenant. More info [here](https://docs.microsoft.com/en-us/sharepoint/dev/spfx/use-aadhttpclient#considerations).
+These permissions will be granted on the whole tenant and could be used by any script running in your tenant. More info [here](https://learn.microsoft.com/sharepoint/dev/spfx/use-aadhttpclient#considerations).
 
 :::
 
